k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-java-app
  namespace: dream-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-java-app
  template:
    metadata:
      labels:
        app: sample-java-app
    spec:
      containers:
        - name: java-app
          image: gizemk/sample-java-app:multi-stage
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
