k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-java-app
  namespace: dream-game
spec:
  selector:
    app: sample-java-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
