k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-java-app-ingress
  namespace: dream-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dream.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-backend
                port:
                  number: 80
